Создана шапка сайта

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <title>Document</title>
 </head>
 <body>
-  header>
+  <header>
         <h1>Мой простой сайт</h1>
         <nav>
             <ul>
